feat: add repo list endpoint
